# NumgradPy

./: README.md  environment.yaml  setup.cfg
src/numgradpy/: __init__.py  __main__.py
src/numgradpy/cli/: argparser.py  driver.py  entrypoint.py
src/numgradpy/constants/: __init__.py  convfactors.py  defaultargs.py
src/numgradpy/extprocs/: __init__.py  helpfcts.py  singlepoint.py
src/numgradpy/gradient/: __init__.py  gradients.py
src/numgradpy/io/: __init__.py  parser.py  structure.py  write_output.py
test/test_cli/: test_entrypoint.py
test/test_mymath/: test_square.py
